// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AppBar Main app bar 1`] = `
<header
  className="MuiPaper-root-8 MuiPaper-shadow4-14 MuiAppBar-root-1 MuiAppBar-positionStatic-4 MuiAppBar-colorDefault-5"
>
  <div
    className="MuiToolbar-root-35 MuiToolbar-gutters-36"
  >
    <p
      className="MuiTypography-root-37 MuiTypography-body1-46"
    >
      Wells Fargo
    </p>
  </div>
</header>
`;

exports[`Storyshots Cards Content card 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div>
    <h1>
       Content 
    </h1>
  </div>
</div>
`;

exports[`Storyshots Cards Simple card 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-66 MuiCardHeader-root-61"
  >
    <div
      className="MuiCardHeader-content-63"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
      >
        Title
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-66"
  >
    fdsa
  </div>
</div>
`;

exports[`Storyshots HighlightBox Account Total 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-66 MuiCardHeader-root-61"
  >
    <div
      className="MuiCardHeader-content-63"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
      >
        Account Total
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-66"
  >
    <h1>
      $7,749.34
    </h1>
    <hr
      className="MuiDivider-root-150 MuiDivider-default-151"
    />
    <ul
      className="MuiList-root-155 MuiList-padding-156"
    >
      <li
        className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-171"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots HighlightBox Annulized Percentage Return 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-66 MuiCardHeader-root-61"
  >
    <div
      className="MuiCardHeader-content-63"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
      >
        Annulized Percentage Return
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-66"
  >
    <h1>
      3.75%
    </h1>
    <hr
      className="MuiDivider-root-150 MuiDivider-default-151"
    />
    <ul
      className="MuiList-root-155 MuiList-padding-156"
    >
      <li
        className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-171"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots HighlightBox Playground 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-66 MuiCardHeader-root-61"
  >
    <div
      className="MuiCardHeader-content-63"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
      >
        Account Total
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-66"
  >
    <h1>
      $1234.56
    </h1>
    <hr
      className="MuiDivider-root-150 MuiDivider-default-151"
    />
    <ul
      className="MuiList-root-155 MuiList-padding-156"
    >
      <li
        className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-171"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots InvestBucket Playground 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-66 MuiCardHeader-root-61"
  >
    <div
      className="MuiCardHeader-content-63"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
      >
        Risk 1
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-66"
  >
    <ul
      className="MuiList-root-155 MuiList-padding-156"
    >
      <li
        className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
        disabled={false}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-170 MuiListItemIcon-root-169"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
          />
        </svg>
        <div
          autoFocus={true}
          className="MuiListItemText-root-171"
          fullWidth={true}
          margin="dense"
          onClick={[Function]}
        >
          <h3
            className="MuiTypography-root-37 MuiTypography-subheading-44 MuiListItemText-text-174"
          >
            Good to get started
          </h3>
        </div>
      </li>
      <li
        className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
        disabled={false}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-170 MuiListItemIcon-root-169"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
        <div
          className="MuiFormControl-root-216"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          required={false}
        >
          <div
            className="MuiInput-root-220 MuiInput-formControl-221 MuiInput-inkbar-222 MuiInput-underline-228"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-224 MuiInput-inputSingleline-231"
              defaultValue={undefined}
              disabled={false}
              id={undefined}
              name={undefined}
              onChange={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value="Low risk"
            />
          </div>
        </div>
      </li>
      <li
        className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
        disabled={false}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-170 MuiListItemIcon-root-169"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
          />
        </svg>
        <div
          autoFocus={true}
          className="MuiListItemText-root-171"
          fullWidth={true}
          margin="dense"
          onClick={[Function]}
        >
          <h3
            className="MuiTypography-root-37 MuiTypography-subheading-44 MuiListItemText-text-174"
          >
            Low reward
          </h3>
        </div>
      </li>
    </ul>
    <button
      aria-label="add"
      className="MuiButtonBase-root-192 MuiButton-root-178 MuiButton-raised-185 MuiButton-fab-191 MuiButton-raisedPrimary-187"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-180"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-170"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-194"
      />
    </button>
  </div>
  <div
    className="MuiCardActions-root-176"
  >
    <button
      className="MuiButtonBase-root-192 MuiButton-root-178 MuiButton-flatPrimary-181 MuiButton-dense-179 MuiCardActions-actionSpacing-177"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-180"
      >
        Invest
      </span>
      <span
        className="MuiTouchRipple-root-194"
      />
    </button>
    <button
      className="MuiButtonBase-root-192 MuiButton-root-178 MuiButton-flatPrimary-181 MuiButton-dense-179 MuiCardActions-actionSpacing-177"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-180"
      >
        Learn More
      </span>
      <span
        className="MuiTouchRipple-root-194"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Page Test page 1`] = `
<div
  className="MuiGrid-typeContainer-67 MuiGrid-spacing-xs-16-82"
>
  <div
    className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-6-104"
  >
    <div
      className="MuiGrid-typeContainer-67 MuiGrid-spacing-xs-16-82"
    >
      <div
        className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-6-104"
      >
        <div
          className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
        >
          <div
            className="MuiCardContent-root-66 MuiCardHeader-root-61"
          >
            <div
              className="MuiCardHeader-content-63"
            >
              <span
                className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
              >
                Current balance
              </span>
              <span
                className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
              />
            </div>
          </div>
          <div
            className="MuiCardContent-root-66"
          >
            <h1>
              $1300
            </h1>
            <hr
              className="MuiDivider-root-150 MuiDivider-default-151"
            />
            <ul
              className="MuiList-root-155 MuiList-padding-156"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-6-104"
      >
        <div
          className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
        >
          <div
            className="MuiCardContent-root-66 MuiCardHeader-root-61"
          >
            <div
              className="MuiCardHeader-content-63"
            >
              <span
                className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
              >
                Total Income
              </span>
              <span
                className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
              />
            </div>
          </div>
          <div
            className="MuiCardContent-root-66"
          >
            <h1>
              $300
            </h1>
            <hr
              className="MuiDivider-root-150 MuiDivider-default-151"
            />
            <ul
              className="MuiList-root-155 MuiList-padding-156"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-6-104"
      >
        <div
          className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
        >
          <div
            className="MuiCardContent-root-66 MuiCardHeader-root-61"
          >
            <div
              className="MuiCardHeader-content-63"
            >
              <span
                className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
              >
                Total Expenditures
              </span>
              <span
                className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
              />
            </div>
          </div>
          <div
            className="MuiCardContent-root-66"
          >
            <h1>
              $250
            </h1>
            <hr
              className="MuiDivider-root-150 MuiDivider-default-151"
            />
            <ul
              className="MuiList-root-155 MuiList-padding-156"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-6-104"
      >
        <div
          className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
        >
          <div
            className="MuiCardContent-root-66 MuiCardHeader-root-61"
          >
            <div
              className="MuiCardHeader-content-63"
            >
              <span
                className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
              >
                Another box
              </span>
              <span
                className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
              />
            </div>
          </div>
          <div
            className="MuiCardContent-root-66"
          >
            <h1>
              $1000
            </h1>
            <hr
              className="MuiDivider-root-150 MuiDivider-default-151"
            />
            <ul
              className="MuiList-root-155 MuiList-padding-156"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-6-104"
  >
    <div
      className="my-pretty-chart-container"
    >
      <div
        id="chart"
        style={
          Object {
            "height": "450px",
            "width": "100%",
          }
        }
      >
        <div>
          Rendering Chart
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-6-104"
  >
    <div
      className="MuiGrid-typeContainer-67 MuiGrid-spacing-xs-16-82"
    >
      <div
        className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-6-104"
      >
        <div
          className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
        >
          <div
            className="MuiCardContent-root-66 MuiCardHeader-root-61"
          >
            <div
              className="MuiCardHeader-content-63"
            >
              <span
                className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
              >
                Pumpkin
              </span>
              <span
                className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
              />
            </div>
          </div>
          <div
            className="MuiCardContent-root-66"
          >
            <h1>
              $13
            </h1>
            <hr
              className="MuiDivider-root-150 MuiDivider-default-151"
            />
            <ul
              className="MuiList-root-155 MuiList-padding-156"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-6-104"
      >
        <div
          className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
        >
          <div
            className="MuiCardContent-root-66 MuiCardHeader-root-61"
          >
            <div
              className="MuiCardHeader-content-63"
            >
              <span
                className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
              >
                Fixed monthly
              </span>
              <span
                className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
              />
            </div>
          </div>
          <div
            className="MuiCardContent-root-66"
          >
            <h1>
              $200
            </h1>
            <hr
              className="MuiDivider-root-150 MuiDivider-default-151"
            />
            <ul
              className="MuiList-root-155 MuiList-padding-156"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-6-104"
      >
        <div
          className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
        >
          <div
            className="MuiCardContent-root-66 MuiCardHeader-root-61"
          >
            <div
              className="MuiCardHeader-content-63"
            >
              <span
                className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
              >
                Invest Income
              </span>
              <span
                className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
              />
            </div>
          </div>
          <div
            className="MuiCardContent-root-66"
          >
            <h1>
              10%
            </h1>
            <hr
              className="MuiDivider-root-150 MuiDivider-default-151"
            />
            <ul
              className="MuiList-root-155 MuiList-padding-156"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-6-104"
      >
        <div
          className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
        >
          <div
            className="MuiCardContent-root-66 MuiCardHeader-root-61"
          >
            <div
              className="MuiCardHeader-content-63"
            >
              <span
                className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
              >
                Expendable cash
              </span>
              <span
                className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
              />
            </div>
          </div>
          <div
            className="MuiCardContent-root-66"
          >
            <h1>
              5%
            </h1>
            <hr
              className="MuiDivider-root-150 MuiDivider-default-151"
            />
            <ul
              className="MuiList-root-155 MuiList-padding-156"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-6-104"
  >
    <div
      className="MuiGrid-typeContainer-67 MuiGrid-spacing-xs-16-82"
    >
      <div
        className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-8-106 MuiGrid-grid-lg-4-128"
      >
        <div
          className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
        >
          <div
            className="MuiCardContent-root-66 MuiCardHeader-root-61"
          >
            <div
              className="MuiCardHeader-content-63"
            >
              <span
                className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
              >
                Risk 1
              </span>
              <span
                className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
              />
            </div>
          </div>
          <div
            className="MuiCardContent-root-66"
          >
            <ul
              className="MuiList-root-155 MuiList-padding-156"
            >
              <li
                className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
                disabled={false}
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-170 MuiListItemIcon-root-169"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                  />
                </svg>
                <div
                  autoFocus={true}
                  className="MuiListItemText-root-171"
                  fullWidth={true}
                  margin="dense"
                >
                  <h3
                    className="MuiTypography-root-37 MuiTypography-subheading-44 MuiListItemText-text-174"
                  >
                    Good to get started
                  </h3>
                </div>
              </li>
              <li
                className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
                disabled={false}
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-170 MuiListItemIcon-root-169"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                  />
                </svg>
                <div
                  autoFocus={true}
                  className="MuiListItemText-root-171"
                  fullWidth={true}
                  margin="dense"
                >
                  <h3
                    className="MuiTypography-root-37 MuiTypography-subheading-44 MuiListItemText-text-174"
                  >
                    Low risk
                  </h3>
                </div>
              </li>
              <li
                className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
                disabled={false}
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-170 MuiListItemIcon-root-169"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
                  />
                </svg>
                <div
                  autoFocus={true}
                  className="MuiListItemText-root-171"
                  fullWidth={true}
                  margin="dense"
                >
                  <h3
                    className="MuiTypography-root-37 MuiTypography-subheading-44 MuiListItemText-text-174"
                  >
                    Low reward
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            className="MuiCardActions-root-176"
          >
            <button
              className="MuiButtonBase-root-192 MuiButton-root-178 MuiButton-flatPrimary-181 MuiButton-dense-179 MuiCardActions-actionSpacing-177"
              disabled={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label-180"
              >
                Invest
              </span>
              <span
                className="MuiTouchRipple-root-194"
              />
            </button>
            <button
              className="MuiButtonBase-root-192 MuiButton-root-178 MuiButton-flatPrimary-181 MuiButton-dense-179 MuiCardActions-actionSpacing-177"
              disabled={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label-180"
              >
                Learn More
              </span>
              <span
                className="MuiTouchRipple-root-194"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-8-106 MuiGrid-grid-lg-4-128"
      >
        <div
          className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
        >
          <div
            className="MuiCardContent-root-66 MuiCardHeader-root-61"
          >
            <div
              className="MuiCardHeader-content-63"
            >
              <span
                className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
              >
                Risk 2
              </span>
              <span
                className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
              />
            </div>
          </div>
          <div
            className="MuiCardContent-root-66"
          >
            <ul
              className="MuiList-root-155 MuiList-padding-156"
            >
              <li
                className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
                disabled={false}
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-170 MuiListItemIcon-root-169"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                  />
                </svg>
                <div
                  autoFocus={true}
                  className="MuiListItemText-root-171"
                  fullWidth={true}
                  margin="dense"
                >
                  <h3
                    className="MuiTypography-root-37 MuiTypography-subheading-44 MuiListItemText-text-174"
                  >
                    Allows you to take more risk
                  </h3>
                </div>
              </li>
              <li
                className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
                disabled={false}
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-170 MuiListItemIcon-root-169"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                  />
                </svg>
                <div
                  autoFocus={true}
                  className="MuiListItemText-root-171"
                  fullWidth={true}
                  margin="dense"
                >
                  <h3
                    className="MuiTypography-root-37 MuiTypography-subheading-44 MuiListItemText-text-174"
                  >
                    Pays significant rewards
                  </h3>
                </div>
              </li>
              <li
                className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
                disabled={false}
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-170 MuiListItemIcon-root-169"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
                  />
                </svg>
                <div
                  autoFocus={true}
                  className="MuiListItemText-root-171"
                  fullWidth={true}
                  margin="dense"
                >
                  <h3
                    className="MuiTypography-root-37 MuiTypography-subheading-44 MuiListItemText-text-174"
                  >
                    You might lose some money
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            className="MuiCardActions-root-176"
          >
            <button
              className="MuiButtonBase-root-192 MuiButton-root-178 MuiButton-flatPrimary-181 MuiButton-dense-179 MuiCardActions-actionSpacing-177"
              disabled={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label-180"
              >
                Invest
              </span>
              <span
                className="MuiTouchRipple-root-194"
              />
            </button>
            <button
              className="MuiButtonBase-root-192 MuiButton-root-178 MuiButton-flatPrimary-181 MuiButton-dense-179 MuiCardActions-actionSpacing-177"
              disabled={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label-180"
              >
                Learn More
              </span>
              <span
                className="MuiTouchRipple-root-194"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-68 MuiGrid-grid-xs-12-97 MuiGrid-grid-sm-8-106 MuiGrid-grid-lg-4-128"
      >
        <div
          className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
        >
          <div
            className="MuiCardContent-root-66 MuiCardHeader-root-61"
          >
            <div
              className="MuiCardHeader-content-63"
            >
              <span
                className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
              >
                Risk 3
              </span>
              <span
                className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
              />
            </div>
          </div>
          <div
            className="MuiCardContent-root-66"
          >
            <ul
              className="MuiList-root-155 MuiList-padding-156"
            >
              <li
                className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
                disabled={false}
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-170 MuiListItemIcon-root-169"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                  />
                </svg>
                <div
                  autoFocus={true}
                  className="MuiListItemText-root-171"
                  fullWidth={true}
                  margin="dense"
                >
                  <h3
                    className="MuiTypography-root-37 MuiTypography-subheading-44 MuiListItemText-text-174"
                  >
                    $$$
                  </h3>
                </div>
              </li>
              <li
                className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
                disabled={false}
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-170 MuiListItemIcon-root-169"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                  />
                </svg>
                <div
                  autoFocus={true}
                  className="MuiListItemText-root-171"
                  fullWidth={true}
                  margin="dense"
                >
                  <h3
                    className="MuiTypography-root-37 MuiTypography-subheading-44 MuiListItemText-text-174"
                  >
                    More $$$
                  </h3>
                </div>
              </li>
              <li
                className="MuiListItem-root-159 MuiListItem-gutters-166 MuiListItem-default-162"
                disabled={false}
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-170 MuiListItemIcon-root-169"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
                  />
                </svg>
                <div
                  autoFocus={true}
                  className="MuiListItemText-root-171"
                  fullWidth={true}
                  margin="dense"
                >
                  <h3
                    className="MuiTypography-root-37 MuiTypography-subheading-44 MuiListItemText-text-174"
                  >
                    You're fucking insane of you invest in this
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            className="MuiCardActions-root-176"
          >
            <button
              className="MuiButtonBase-root-192 MuiButton-root-178 MuiButton-flatPrimary-181 MuiButton-dense-179 MuiCardActions-actionSpacing-177"
              disabled={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label-180"
              >
                Invest
              </span>
              <span
                className="MuiTouchRipple-root-194"
              />
            </button>
            <button
              className="MuiButtonBase-root-192 MuiButton-root-178 MuiButton-flatPrimary-181 MuiButton-dense-179 MuiCardActions-actionSpacing-177"
              disabled={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label-180"
              >
                Learn More
              </span>
              <span
                className="MuiTouchRipple-root-194"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Saldo Playground 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-66 MuiCardHeader-root-61"
  >
    <div
      className="MuiCardHeader-content-63"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-64"
      >
        Saldo
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-65"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-66"
  >
    <table
      className="MuiTable-root-201"
    >
      <tbody
        className="MuiTableBody-root-202"
      >
        <tr
          className="MuiTableRow-root-203"
        >
          <td
            className="MuiTableCell-root-209 withStyles-TableCell--root-208 MuiTableCell-paddingDefault-212"
          >
            investedSharesValue
          </td>
          <td
            className="MuiTableCell-root-209 withStyles-TableCell--root-208 MuiTableCell-paddingDefault-212"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $700.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-203"
        >
          <td
            className="MuiTableCell-root-209 withStyles-TableCell--root-208 MuiTableCell-paddingDefault-212"
          >
            earnedSharesValue
          </td>
          <td
            className="MuiTableCell-root-209 withStyles-TableCell--root-208 MuiTableCell-paddingDefault-212"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $74.93
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-203"
        >
          <td
            className="MuiTableCell-root-209 withStyles-TableCell--root-208 MuiTableCell-paddingDefault-212"
          >
            bonusSharesValue
          </td>
          <td
            className="MuiTableCell-root-209 withStyles-TableCell--root-208 MuiTableCell-paddingDefault-212"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-203"
        >
          <td
            className="MuiTableCell-root-209 MuiTableCell-paddingDefault-212"
          >
            reinvestedSharesValue
          </td>
          <td
            className="MuiTableCell-root-209 MuiTableCell-paddingDefault-212"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-203"
        >
          <td
            className="MuiTableCell-root-209 withStyles-TableCell--root-208 MuiTableCell-paddingDefault-212"
          >
            totalSharesValue
          </td>
          <td
            className="MuiTableCell-root-209 withStyles-TableCell--root-208 MuiTableCell-paddingDefault-212"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $774.93
          </td>
        </tr>
      </tbody>
    </table>
    <button
      className="MuiButtonBase-root-192 MuiButton-root-178 MuiButton-raised-185"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-180"
      >
        Sell Shares
      </span>
      <span
        className="MuiTouchRipple-root-194"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots StockGraph Playground 1`] = `
<div
  className="my-pretty-chart-container"
>
  <div
    id="chart"
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  >
    <div>
      Rendering Chart
    </div>
  </div>
</div>
`;
